--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <main>
-    <h1 style="color: white">Space: The Final Frontier</h1>
+    <h1 style="color: white">Space: The Final Frontier yes</h1>
   </main>
 
   <p style="color: white">
